# dw-de-commodities

./: .gitignore  .user.yml  README.md  exemplo.env  profiles.yml  pyproject.toml  requirements.txt
dashboard/: app.py
datawarehouse/: dbt_project.yml
datawarehouse/docs/: homepage.md
datawarehouse/models/: schema.yml
datawarehouse/models/datamart/: dm_commodities.sql
datawarehouse/models/staging/: schema.yml  stg_commodities.sql  stg_movimentacao_commodities.sql
dbt_commodities/: dbt_project.yml
dbt_commodities/docs/: homepage.md
dbt_commodities/models/: sources.yml
dbt_commodities/models/bronze/: bronze_commodities.sql  bronze_movimentacao_commodities.sql  schema.yml
dbt_commodities/models/gold/: gold_datamart_commodities.sql  schema.yml
dbt_commodities/models/silver/: schema.yml  silver_commodities.sql  silver_movimentacao_commodities.sql
dbt_commodities/seeds/: movimentacao_commodities.csv  schema.yml
src/: dashboard.py  database.py  extrair_carregar.py
