[tool.poetry]
name = "dw-de-commodities"
version = "0.1.0"
description = ""
authors = ["ianlucasch <ianlucaschaves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.38.0"
sqlalchemy = "2.0.35"
python-dotenv = "1.0.1"
psycopg2-binary = "2.9.9"
yfinance = "0.2.43"
dbt-postgres = "1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
